frostwire (5.2.3) stable; urgency=high
  * Change the order of an audio file on playlist with drag and drop.
  * Change the order of multiple audio files on a playlist with drag and drop.
  * Drop audio files and folders at a specific position inside a playlist.
  * Remembers the column and order you last set on the transfer manager
    after restart.
  * Bug fix, now if you're playing a song and you resort the playlist by
    any of the columns, the next song to be played will be the one below
    the current song in the new order.
  * Searching inside "Finished Downloads" now yields folder names as search
    results.
  * Fixes lingering popup menu issue.
  * Fixed DNS query issue affecting Linux and Mac OSX.
 
 -- FrostWire Team <contact@frostwire.com>  Wed, 19 Oct 2011 00:30:56 -0500

frostwire (5.2.2) stable; urgency=high
  * Library tables are now cached in memory, searches are done in the cache
    speeding up the experience considerably for users with several thousand
    files.
  * Create or add audio files to a playlist right from the Transfer manager.
  * iTunes importing after audio transfers finish turned off by default.
  * Completed transfers that contain at least one audio file can be sent
    to iTunes from the Transfer manager.
  * Audio status component recognizes an Audio Stream, from an Audio file
    from an internet stream url. Clicking on it will take you to the
    Android Tab if it's an android stream or to the Library otherwise.
  * Fixes issues with download mediator refresh.
  * Fixes out of memory error.
  * Real time UI feedback as audio files are being imported into playlist.
  * F5, Cmd+R or Ctrl+R will refresh the current Library table.
 
 -- FrostWire Team <contact@frostwire.com>  Mon, 10 Oct 2011 18:03:10 -0500

frostwire (5.2.1) stable; urgency=high
  * Play/Pause player buttons now share the same button depending on state.
  * Mac OSX threading bug when importing .m3u playlist to new playlist fixed.